--- a/style/main.css
+++ b/style/main.css
@@ -9,9 +9,11 @@
   box-sizing: border-box;
 }
 
+/* Elementos base */
 body {
   background: var(--preta);
   font-family: 'Times New Roman', Times, serif;
+  color: white;
 }
 
 header .container {
@@ -38,4 +40,26 @@ header nav a {
 
 header nav a:hover {
   color: #FFF;
+}
+
+/* Filme principal */
+.filme-principal {
+  font-size: 16px;
+  background: linear-gradient(rgba(0, 0, 0, .50), rgba(0,0,0, .50)100%), url('../img/capa-house.jpg');
+  background-size: cover;
+
+  height: 400px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.filme-principal .descricao {
+  margin-bottom: 40px;
+}
+
+.titulo {
+  font-size: 40px;
 }
