--- a/style/main.css
+++ b/style/main.css
@@ -12,7 +12,7 @@
 /* Elementos base */
 body {
   background: var(--preta);
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Arial', Times, serif;
   color: white;
 }
 
@@ -33,6 +33,7 @@ header .logo {
 header nav a {
   text-decoration: none;
   color: #AAA;
+
   margin-right: 10px;
 
   transition: color 0.4s;
@@ -45,7 +46,7 @@ header nav a:hover {
 /* Filme principal */
 .filme-principal {
   font-size: 16px;
-  background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)100%), url('../img/capa-house.jpg');
+  background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50) 100%), url('../img/capa-house.jpg');
   background-size: cover;
 
   height: 400px;
@@ -69,23 +70,32 @@ header nav a:hover {
 }
 
 .botao {
-  background-color: rgba(0,0,0, .50);
   border: none;
+  
+  background-color: rgba(0,0,0, .50);
   color: white;
+  font-size: 12px;
 
   padding: 15px 30px;
   margin-right: 15px;
-  font-size: 12px;
 
   cursor: pointer;
   transition: .3s ease all;
 }
 
 .botao:hover {
-  background-color: white;
+  background-color: rgba(255, 255, 255, .70);
   color: var(--preta);
 }
 
 .botao i {
   margin-right: 8px;
+}
+
+.container {
+  margin-left: 20px;
+}
+
+.filme-principal .container {
+  width: 70%;
 }
